ticket: 6826 subject: Fix Windows build target_version: 1.9 tags: pullup
Repair the Windows build.  Tested with the prepare-on-Unix method.
Some specific changes include:

* Removed the IPC finalizer (no longer used after r20787) from
  ccapi/lib/ccapi_ipc.c, as it was creating a difficult dependency
  chain for the pingtest build in ccapi/test.  Also updated pingtest
  to use the k5_ipc_stream interfaces since cci_stream is gone.

* Reverted the apparently non-functional r20277.

* klist -V prints just "Kerberos for Windows", since it has no access
  to PACKAGE_NAME and PACKAGE_VERSION from autoconf.  This should be
  addressed correctly.

* krb5, telnet, gssftp, and NIM are removed from the build.

* Some files had CRLFs; these were replaced with LFs and the
  svn:eol-style property set on the files.  Otherwise the CRLFs became
  CRCRLFs after the zip transfer.

* Windows does not have opendir/readdir, so added Windows code to
  prof_parse.c for includedir.  Probable fodder for a libkrb5support
  portability shim.


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24533 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/appl/Makefile.in
+++ b/src/appl/Makefile.in
@@ -3,4 +3,14 @@ BUILDTOP=$(REL)..
 
 SUBDIRS= sample simple user_user gss-sample
 
+all-windows:: 
+	@echo Making in gss-sample
+	cd gss-sample
+	$(MAKE) -$(MFLAGS)
+	cd ..
 
+clean-windows::
+	@echo Making clean in lib\crypto
+	cd gss-sample
+	$(MAKE) -$(MFLAGS) clean
+	cd ..
