--- a/src/lib/crypto/krb/prng/Makefile.in
+++ b/src/lib/crypto/krb/prng/Makefile.in
@@ -1,16 +1,19 @@
 mydir=lib/crypto/krb/prng
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..
-SUBDIRS= @PRNG_ALG@
-LOCALINCLUDES = -I$(srcdir) -I$(srcdir)/../../@CRYPTO_IMPL@/enc_provider \
-		-I$(srcdir)/../../@CRYPTO_IMPL@/hash_provider				\
-		-I$(srcdir)/@PRNG_ALG@ 			\
-		-I$(srcdir)/../../@CRYPTO_IMPL@/ 		\
-		-I$(srcdir)/../../@CRYPTO_IMPL@/aes 	\
-		-I$(srcdir)/../../@CRYPTO_IMPL@/sha1 -I$(srcdir)/../../@CRYPTO_IMPL@/sha2
+SUBDIRS= $(PRNG_ALG)
+LOCALINCLUDES = -I$(srcdir) -I$(srcdir)/../../$(CRYPTO_IMPL)/enc_provider \
+		-I$(srcdir)/../../$(CRYPTO_IMPL)/hash_provider				\
+		-I$(srcdir)/$(PRNG_ALG) 			\
+		-I$(srcdir)/../../$(CRYPTO_IMPL)/ 		\
+		-I$(srcdir)/../../$(CRYPTO_IMPL)/aes 	\
+		-I$(srcdir)/../../$(CRYPTO_IMPL)/sha1 -I$(srcdir)/../../$(CRYPTO_IMPL)/sha2
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
 DEFS=
 
+##DOS##BUILDTOP = ..\..\..\..
+##DOS##PREFIXDIR = krb\prng
+##DOS##OBJFILE = ..\..\$(OUTPRE)prng.lst
 
 PROG_LIBPATH=-L$(TOPLIBD)
 PROG_RPATH=$(KRB5_LIBDIR)
@@ -24,9 +27,11 @@ OBJS=\
 SRCS=\
 	$(srcdir)/prng.c
 
-STOBJLISTS= OBJS.ST  @PRNG_ALG@/OBJS.ST 
+##DOS##LIBOBJS = $(OBJS)
 
-SUBDIROBJLISTS=  @PRNG_ALG@/OBJS.ST 
+STOBJLISTS= OBJS.ST  $(PRNG_ALG)/OBJS.ST 
+
+SUBDIROBJLISTS=  $(PRNG_ALG)/OBJS.ST 
 
 
 all-unix:: all-libobjs
@@ -35,6 +40,27 @@ includes:: depend
 depend:: $(SRCS)
 
 clean-unix:: clean-libobjs
+
+all-windows::
+	cd yarrow
+	@echo Making in crypto\krb\prng\yarrow
+	$(MAKE) -$(MFLAGS)
+	cd ..
+	@echo Making in crypto\krb\prng
+
+clean-windows::
+	cd yarrow
+	@echo Making clean in crypto\krb\prng\yarrow
+	$(MAKE) -$(MFLAGS) clean
+	cd ..
+	@echo Making clean in crypto\krb\prng
+
+check-windows::
+	cd yarrow
+	@echo Making check in crypto\krb\prng\yarrow
+	$(MAKE) -$(MFLAGS) check
+	cd ..
+	@echo Making check in crypto\krb\prng
 
 @lib_frag@
 @libobj_frag@
