--- a/src/lib/crypto/krb/prng/nss/Makefile.in
+++ b/src/lib/crypto/krb/prng/nss/Makefile.in
@@ -2,7 +2,7 @@ mydir=lib/crypto/krb/prng/nss
 BUILDTOP=$(REL)..$(S)..$(S)..$(S)..$(S)..
 CRYPTO_IMPL_CFLAGS=@CRYPTO_IMPL_CFLAGS@
 LOCALINCLUDES = -I$(srcdir)/.. -I$(srcdir)/../.. \
-		-I$(srcdir)/../../../@CRYPTO_IMPL@ $(CRYPTO_IMPL_CFLAGS)
+		-I$(srcdir)/../../../$(CRYPTO_IMPL) $(CRYPTO_IMPL_CFLAGS)
 DEFS=
 
 PROG_LIBPATH=-L$(TOPLIBD)
