--- a/src/windows/Makefile.in
+++ b/src/windows/Makefile.in
@@ -4,19 +4,15 @@ NO_OUTPRE=1
 #
 # Makefile that recurses into cns subdirectory.
 #
-all-windows:: ntsecapitest
+all-windows::
 	@echo Making in windows\lib
 	cd lib
 	$(MAKE) -$(MFLAGS)
 	@echo Making in windows\cns
 	cd ..\cns
 	$(MAKE) -$(MFLAGS)
-	@echo Making in windows\wintel
-	cd ..\wintel
-	$(MAKE) -$(MFLAGS)
-       @echo Making in windows\gss
+	@echo Making in windows\gss
 	cd ..\gss
-	cd
 	$(MAKE) -$(MFLAGS)
 	@echo Making in windows\gina
 	cd ..\gina
@@ -28,21 +24,15 @@ all-windows:: ntsecapitest
         @echo Making in windows\kfwlogon
         cd ..\kfwlogon
         $(MAKE) -$(MFLAGS) 
-        @echo Making in windows\identity 
-        cd ..\identity 
-        $(MAKE) -$(MFLAGS) 
 !endif 
 	cd ..
 
-clean-windows:: clean-ntsecapitest
+clean-windows::
 	@echo Making clean in windows\lib
 	cd lib
 	$(MAKE) -$(MFLAGS) clean
 	@echo Making clean in windows\cns
 	cd ..\cns
-	$(MAKE) -$(MFLAGS) clean
-	@echo Making clean in windows\wintel
-	cd ..\wintel
 	$(MAKE) -$(MFLAGS) clean
 	@echo Making clean in windows\gss
 	cd ..\gss
@@ -57,20 +47,5 @@ clean-windows:: clean-ntsecapitest
         @echo Making clean in windows\kfwlogon
         cd ..\kfwlogon
         $(MAKE) -$(MFLAGS) clean 
-        @echo Making clean in windows\identity 
-        cd ..\identity 
-        $(MAKE) -$(MFLAGS) clean 
 !endif 
 	cd ..
-
-# If ntsecapi.h contains the string that indicates it came from the Vista SDK,
-#  then ntsecapitest.i will be left behind.  If the string is not present,
-#  ntsecapitest.i will be deleted. 
-ntsecapitest:: ntsecapitest.i
-    ntsecapitest.pl
-
-clean-ntsecapitest::
-    $(RM) ntsecapitest.i
-
-{}.c{}.i:
-    @$(C_RULE) -P
