Asn.1 decode related file rearrangement. It was made based on the following criteria: 1. based on functionality (for example, kdc-only code) 2. Well defined clusters of functions (fast, sam).
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24593 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/krb5/asn.1/Makefile.in
+++ b/src/lib/krb5/asn.1/Makefile.in
@@ -11,11 +11,15 @@ EHDRDIR=$(BUILDTOP)/include/krb5/asn.1
 STLIBOBJS= \
 	asn1_decode.o\
 	asn1_k_decode.o\
+	asn1_k_decode_fast.o\
+	asn1_k_decode_kdc.o\
+	asn1_k_decode_sam.o\
 	asn1_encode.o\
 	asn1_get.o\
 	asn1_make.o\
 	asn1buf.o\
 	krb5_decode.o\
+	krb5_decode_kdc.o\
 	krb5_encode.o\
 	asn1_k_encode.o\
 	ldap_key_seq.o\
@@ -24,11 +28,15 @@ STLIBOBJS= \
 SRCS= \
 	$(srcdir)/asn1_decode.c\
 	$(srcdir)/asn1_k_decode.c\
+	$(srcdir)/asn1_k_decode_fast.c\
+	$(srcdir)/asn1_k_decode_kdc.c\
+	$(srcdir)/asn1_k_decode_sam.c\
 	$(srcdir)/asn1_encode.c\
 	$(srcdir)/asn1_get.c\
 	$(srcdir)/asn1_make.c\
 	$(srcdir)/asn1buf.c\
 	$(srcdir)/krb5_decode.c\
+	$(srcdir)/krb5_decode_kdc.c\
 	$(srcdir)/krb5_encode.c\
 	$(srcdir)/asn1_k_encode.c\
 	$(srcdir)/ldap_key_seq.c\
@@ -37,11 +45,15 @@ SRCS= \
 OBJS= \
 	$(OUTPRE)asn1_decode.$(OBJEXT)\
 	$(OUTPRE)asn1_k_decode.$(OBJEXT)\
+	$(OUTPRE)asn1_k_decode_fast.$(OBJEXT)\
+	$(OUTPRE)asn1_k_decode_kdc.$(OBJEXT)\
+	$(OUTPRE)asn1_k_decode_sam.$(OBJEXT)\
 	$(OUTPRE)asn1_encode.$(OBJEXT)\
 	$(OUTPRE)asn1_get.$(OBJEXT)\
 	$(OUTPRE)asn1_make.$(OBJEXT)\
 	$(OUTPRE)asn1buf.$(OBJEXT)\
 	$(OUTPRE)krb5_decode.$(OBJEXT)\
+	$(OUTPRE)krb5_decode_kdc.$(OBJEXT)\
 	$(OUTPRE)krb5_encode.$(OBJEXT)\
 	$(OUTPRE)asn1_k_encode.$(OBJEXT)\
 	$(OUTPRE)ldap_key_seq.$(OBJEXT)\
