Add "make doxugen" option to generate doxygen output.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24615 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -752,3 +752,11 @@ mark-cstyle-krb5::
 mark-cstyle-bsd::
 	(cd $(top_srcdir) && $(FIND) $(BSDFILES) -print0 | $(XARGS) -0 \
 	$(PYTHON) util/krb5-mark-cstyle.py --cstyle=bsd)
+
+doxygen::
+	if test "which doxygen" != ""; then \
+		doxygen; \
+	else \
+		echo "Doxygen is not installed or incorrect PATH"; \
+	fi
+
