ticket: 6858 subject: Assume ELF on FreeBSD if objformat doesn't exist
If /usr/bin/objformat doesn't exist on a FreeBSD system, it could
indicate a pre-3.0 a.out version or a post-7.0 ELF version.  Since
FreeBSD 3.0 is now twelve years old, it's safer to assume ELF than
a.out.

From aberry@likewise.com.


git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24619 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/config/shlib.conf
+++ b/src/config/shlib.conf
@@ -309,7 +309,7 @@ mips-*-netbsd*)
 	if test -x /usr/bin/objformat ; then
 		objformat=`/usr/bin/objformat`
 	else
-		objformat="aout"
+		objformat="elf"
 	fi
 	PICFLAGS=-fpic
 	if test "x$objformat" = "xelf" ; then
