ticket: 6871 tags: pullup target_version: 1.9.1
Delete kinit_kdb.o in make clean.

git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24644 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/clients/kinit/Makefile.in
+++ b/src/clients/kinit/Makefile.in
@@ -31,7 +31,7 @@ kinit: kinit.o kinit_kdb.o $(KRB5_BASE_DEPLIBS) $(KADMSRV_DEPLIBS)
 ##WIN32##	$(_VC_MANIFEST_EMBED_EXE)
 
 clean-unix::
-	$(RM) kinit.o kinit
+	$(RM) kinit.o kinit_kdb.o kinit
 
 install-unix::
 	for f in kinit; do \
