--- a/src/configure.in
+++ b/src/configure.in
@@ -154,26 +154,16 @@ AC_SUBST(CRYPTO_IMPL_LIBS)
 if test "$CRYPTO_IMPL" = nss; then
 	PRNG_ALG="nss"
 else
-PRNG_ALG="yarrow"
 AC_ARG_WITH([prng-alg],
-AC_HELP_STRING([--with-prng-alg=ALG], [use specified PRNG algorithm. Ignored for nss. @<:@yarrow@:>@]),
+AC_HELP_STRING([--with-prng-alg=ALG], [use specified PRNG algorithm. Ignored for nss. @<:@fortuna@:>@]),
 [PRNG_ALG=$withval
 AC_MSG_RESULT("k5crypto will use \'$withval\'")
-], withval=yarrow)
+], PRNG_ALG=fortuna)
 fi
 AC_CONFIG_COMMANDS(PRNG_ALG, , PRNG_ALG=$PRNG_ALG)
 AC_SUBST(PRNG_ALG)
-if test "$withval" = fortuna; then
+if test "$PRNG_ALG" = fortuna; then
 	AC_DEFINE(FORTUNA,1,[Define if Fortuna PRNG is selected])
-fi
-
-AC_ARG_ENABLE([fortuna-test],
-	[  --enable-fortuna-test  build to test Fortuna PRNG],,enableval=no)
-if test "$enableval" = yes ; then
-	PRNG_FORTUNA_TEST="yes"
-	AC_DEFINE(TEST_FORTUNA,1,[Create a special build to test Fortuna PRNG])
-	AC_CONFIG_COMMANDS(PRNG_FORTUNA_TEST, , PRNG_FORTUNA_TEST=$PRNG_FORTUNA_TEST)
-	AC_SUBST(PRNG_FORTUNA_TEST)
 fi
 
 # --with-kdc-kdb-update makes the KDC update the database with last request
