Fix dangling Makefile reference after r24652.
git-svn-id: svn://anonsvn.mit.edu/krb5/trunk@24655 dc483132-0cff-0310-8789-dd5450dbe970

--- a/src/lib/crypto/krb/prng/fortuna/Makefile.in
+++ b/src/lib/crypto/krb/prng/fortuna/Makefile.in
@@ -28,7 +28,7 @@ t_fortuna: t_fortuna.$(OBJEXT) $(SUPPORT_DEPLIB)
 	$(CC_LINK) -o t_fortuna t_fortuna.$(OBJEXT) -lcom_err $(SUPPORT_LIB) \
 		$(CRYPTO_DEPLIB)
 
-check-unix:: t_fortuna t_fortuna_make_oct
+check-unix:: t_fortuna
 	$(RUN_SETUP) $(VALGRIND) ./t_fortuna >t_fortuna.output
 	cmp t_fortuna.output $(srcdir)/t_fortuna.expected
 
