--- a/src/lib/crypto/nss/Makefile.in
+++ b/src/lib/crypto/nss/Makefile.in
@@ -20,15 +20,18 @@ DEFS=
 
 STLIBOBJS=\
 	hmac.o	\
-	pbkdf2.o		
+	pbkdf2.o \
+	stubs.o
 
 OBJS=\
 	$(OUTPRE)hmac.$(OBJEXT)	\
-	$(OUTPRE)pbkdf2.$(OBJEXT)		
+	$(OUTPRE)pbkdf2.$(OBJEXT) \
+	$(OUTPRE)stubs.$(OBJEXT)
 
 SRCS=\
 	$(srcdir)/hmac.c	\
-	$(srcdir)/pbkdf2.c	
+	$(srcdir)/pbkdf2.c	\
+	$(srcdir)/stubs.c
 
 STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
 	md5/OBJS.ST sha1/OBJS.ST sha2/OBJS.ST	\
