--- a/src/lib/crypto/openssl/Makefile.in
+++ b/src/lib/crypto/openssl/Makefile.in
@@ -18,17 +18,20 @@ DEFS=
 STLIBOBJS=\
 	hmac.o	\
 	init.o	\
-	pbkdf2.o
+	pbkdf2.o \
+	stubs.o
 
 OBJS=\
 	$(OUTPRE)hmac.$(OBJEXT)	\
 	$(OUTPRE)init.$(OBJEXT)	\
-	$(OUTPRE)pbkdf2.$(OBJEXT)
+	$(OUTPRE)pbkdf2.$(OBJEXT) \
+	$(OUTPRE)stubs.$(OBJEXT)
 
 SRCS=\
 	$(srcdir)/hmac.c	\
 	$(srcdir)/init.c	\
-	$(srcdir)/pbkdf2.c	
+	$(srcdir)/pbkdf2.c	\
+	$(srcdir)/stubs.c
 
 STOBJLISTS= des/OBJS.ST md4/OBJS.ST 	\
 	md5/OBJS.ST sha1/OBJS.ST sha2/OBJS.ST 	\
